--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "scripts/react-native-xcode.sh",
     "template.config.js",
     "template",
-    "third-party-podspecs"
+    "third-party-podspecs",
+    "packages/react-native-gradle-plugin"
   ],
   "scripts": {
     "start": "react-native start",
